package main.weaponBehavior;

public class AxeBehavior implements WeaponBehavior {

    public void useWeapon() {
        System.out.println("Hits with an axe");
    }
}
