package main.weaponBehavior;

public class BowAndArrowBehavior implements WeaponBehavior {

    public void useWeapon() {
        System.out.println("Fires a bow and arrow");
    }
}
