package main.weaponBehavior;

public class KnifeBehavior implements WeaponBehavior {

    public void useWeapon() {
        System.out.println("Beats with a knife");
    }
}
