package main.weaponBehavior;

public class SwordBehavior implements WeaponBehavior {

    public void useWeapon() {
        System.out.println("Strikes with a sword");
    }
}
