package main.weaponBehavior;

public interface WeaponBehavior {

    void useWeapon();
}
